add contact page and add col in container.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="card m-4">
+            <div class="col-xl-12">
+                <div class="card mt-4">
                     <div class="card-body h-100">
                         <h5 class="card-title font-weight-bolder">About Me</h5>
                         <hr> 
@@ -39,6 +40,7 @@
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.
                         </p>
                     </div>
+                </div>
             </div>
         </div>
     </div>
