add portfolio page.

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-12">
-                <div class="card mt-4">
-                    <div class="card-body h-100">
+            <div class="col-lg-8">
+                <div class="card mt-4 mb-4">
+                    <div class="card-body container">
                         <h5 class="card-title font-weight-bolder">About Me</h5>
                         <hr> 
                         <p class="card-text">
-                            <img id="img-portrait" class="float-left mr-4" src="assets/images/portrait.jpeg">
+                            <img class="float-left mr-4 img" src="assets/images/portrait.jpeg">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.
                         </p>
                     </div>
