--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-12">
-                    <div class="card mt-4">
-                        <div class="card-body h-100">
+                    <div class="card mt-4 mb-4">
+                        <div class="card-body container">
                             <h5 class="card-title font-weight-bolder">Contact</h5>
                             <hr> 
                             <div class="mb-3">
