add media query for nav brand on sm screen

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-white pt-0 pb-0 border-bottom">
+    <nav class="navbar navbar-expand-md navbar-light bg-white pt-0 pb-0 border-bottom">
         <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
-        <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button-->
-        <div class="navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
+        <div class="navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav ml-auto ">
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
@@ -26,17 +23,17 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
-        </div>
+        </div> 
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-md-9">
                 <div class="card mt-4 mb-4">
-                    <div class="card-body container">
+                    <div class="card-body">
                         <h5 class="card-title font-weight-bolder">About Me</h5>
                         <hr> 
                         <p class="card-text">
-                            <img class="float-left mr-4 img" src="assets/images/portrait.jpeg">
+                            <img class="float-left mr-4 img-portrait" src="assets/images/portrait.jpeg">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.
                         </p>
                     </div>
