--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,6 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-white pt-0 pb-0 border-bottom">
             <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
-            <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button-->
             <div class="navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -30,7 +27,7 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-12">
+                <div class="col-md-9">
                     <div class="card mt-4 mb-4">
                         <div class="card-body container">
                             <h5 class="card-title font-weight-bolder">Contact</h5>
