--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         </nav>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-12">
+                <div class="col-md-9">
                     <div class="card mt-4 mb-4">
                         <div class="card-body container">
                             <h5 class="card-title font-weight-bolder">Portfolio</h5>
