--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-md navbar-light bg-white pt-0 pb-0 border-bottom">
         <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
         <div class="navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav ml-auto ">
+            <ul class="navbar-nav ml-auto flex-row justify-content-center">
                 <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
                 </li>
