add caption for portfolio images

--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-white pt-0 pb-0 border-bottom">
+    <nav class="navbar navbar-expand-md navbar-light bg-white py-0 border-bottom">
             <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
-            <div class="navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+            <div class="navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ml-auto flex-row justify-content-center">
+                    <li class="nav-item mx-2 m-md-0">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-2 m-md-0">
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-2 m-md-0">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
