--- a/portfolio.html
+++ b/portfolio.html
@@ -9,20 +9,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-white pt-0 pb-0 border-bottom">
+    <nav class="navbar navbar-expand-md navbar-light bg-white py-0 border-bottom">
             <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
-            <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button-->
-            <div class="navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+            <div class="navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav ml-auto flex-row justify-content-center">
+                    <li class="nav-item mx-2 m-md-0">
                         <a class="nav-link" href="#">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-2 m-md-0">
                         <a class="nav-link" href="#">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-2 m-md-0">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                 </ul>
@@ -36,24 +33,29 @@
                             <h5 class="card-title font-weight-bolder">Portfolio</h5>
                             <hr>
                             <div class="row">
-                                <div class="col-md-6">
-                                    <img class="img-portfolio" src="assets/images/placeholder1.jpg" alt="placeholder1">
+                                <div class="col-md-6 p-4">
+                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder1.jpg" alt="placeholder1">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder1</figcaption>
                                 </div>
-                                <div class="col-md-6">
-                                    <img class="img-portfolio" src="assets/images/placeholder2.jpg" alt="placeholder2">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <img class="img-portfolio" src="assets/images/placeholder3.jpg" alt="placeholder3">
-                                </div>
-                                <div class="col-md-6">
-                                    <img class="img-portfolio" src="assets/images/placeholder4.jpg" alt="placeholder4">
+                                <div class="col-md-6 p-4">
+                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder2.jpg" alt="placeholder2">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder2</figcaption>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">
-                                    <img class="img-portfolio" src="assets/images/placeholder5.jpg" alt="placeholder5">
+                                <div class="col-md-6 p-4">
+                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder3.jpg" alt="placeholder3">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder3</figcaption>
+                                </div>
+                                <div class="col-md-6 p-4">
+                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder4.jpg" alt="placeholder4">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder4</figcaption>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 p-4">
+                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder5.jpg" alt="placeholder5">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder5</figcaption>
                                 </div>
                                 <div class="col-md-6">     
                                 </div>
