add self introduction and link to navigate between pages.

--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
             <div class="navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav ml-auto flex-row justify-content-center">
                     <li class="nav-item mx-2 m-md-0">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item mx-2 m-md-0">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item mx-2 m-md-0">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
