--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav ml-auto flex-row justify-content-center">
                 <li class="nav-item mx-2 m-md-0">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
                 <li class="nav-item mx-2 m-md-0">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item mx-2 m-md-0">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div> 
@@ -33,8 +33,9 @@
                         <h5 class="card-title font-weight-bolder">About Me</h5>
                         <hr> 
                         <p class="card-text">
-                            <img class="float-left mr-4 img-portrait" src="assets/images/portrait.jpeg">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst.
+                            <img class="float-left mr-4 img-portrait" src="assets/images/portrait.jpeg" alt="my portrait">
+                            Xiaojie Liu loves programming, traveling and writing. she moved to Seattle several years ago,because she wants to get to know more about the world, learning different culture and talking with people from different background. <br>
+                            She works as Software Engineer at Philips Healthcare, developing software for medical device to diagnose the heart disease. Before that, she got her master and bachelor degree in Computer Science.
                         </p>
                     </div>
                 </div>
