update portfolio to add hangman game link and images.

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
                             <hr>
                             <div class="row">
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder1.jpg" alt="placeholder1">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder1</figcaption>
+                                    <img class="w-100 h-100 float-left" src="assets/images/hangman.jpeg" alt="placeholder1">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/Hangman/">Hangman</a></figcaption>
                                 </div>
                                 <div class="col-md-6 p-4">
                                     <img class="w-100 h-100 float-left" src="assets/images/placeholder2.jpg" alt="placeholder2">
