add starwars game in protfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
                                     <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/Hangman/">Hangman</a></figcaption>
                                 </div>
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder2.jpg" alt="placeholder2">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder2</figcaption>
+                                    <img class="w-100 h-100 float-left" src="assets/images/unit4game.jpg" alt="placeholder2">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/unit-4-game/">unit-4-game</a></figcaption>
                                 </div>
                             </div>
                             <div class="row">
