add trivia in portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder3.jpg" alt="placeholder3">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder3</figcaption>
+                                    <img class="w-100 h-100 float-left" src="assets/images/trivia.jpg" alt="placeholder3">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/TriviaGame/">Trivia</a></figcaption>
                                 </div>
                                 <div class="col-md-6 p-4">
                                     <img class="w-100 h-100 float-left" src="assets/images/placeholder4.jpg" alt="placeholder4">
