add GifTastic to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,22 +34,22 @@
                             <hr>
                             <div class="row">
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/hangman.jpeg" alt="placeholder1">
+                                    <img class="w-100 h-100 float-left" src="assets/images/hangman.jpeg" alt="hangman">
                                     <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/Hangman/">Hangman</a></figcaption>
                                 </div>
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/unit4game.jpg" alt="placeholder2">
+                                    <img class="w-100 h-100 float-left" src="assets/images/unit4game.jpg" alt="unit-4-game">
                                     <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/unit-4-game/">unit-4-game</a></figcaption>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/trivia.jpg" alt="placeholder3">
+                                    <img class="w-100 h-100 float-left" src="assets/images/trivia.jpg" alt="trivia">
                                     <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/TriviaGame/">Trivia</a></figcaption>
                                 </div>
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder4.jpg" alt="placeholder4">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder4</figcaption>
+                                    <img class="w-100 h-100 float-left" src="assets/images/giphy.gif" alt="giftastic">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/GifTastic/">GifTastic</a></figcaption>
                                 </div>
                             </div>
                             <div class="row">
