add train scheduler to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/placeholder5.jpg" alt="placeholder5">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right">Placeholder5</figcaption>
+                                    <img class="w-100 h-100 float-left" src="assets/images/train.jpg" alt="train schedule">
+                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/TrainSchedule/">Train Schedule</a></figcaption>
                                 </div>
                                 <div class="col-md-6">     
                                 </div>
