update contact page.

--- a/contact.html
+++ b/contact.html
@@ -30,21 +30,30 @@
                 <div class="col-md-9">
                     <div class="card mt-4 mb-4">
                         <div class="card-body container">
-                            <h5 class="card-title font-weight-bolder">Contact</h5>
+                            <h5 class="card-title font-weight-bolder">Contact Information</h5>
                             <hr> 
                             <div class="mb-3">
                                 <label class="mb-0">Name</label>
-                                <input type="text" class="form-control" placeholder="John Smith">
+                                <input type="text" class="form-control" value="Xiaojie Liu" readonly>
                             </div>
                             <div class="mb-3">
                                 <label class="mb-0">Email</label>
-                                <input type="text" class="form-control" placeholder="example@gmail.com">
+                                <input type="text" class="form-control" value="liuxiaojie2017@gmail.com" readonly>
                             </div>
                             <div class="mb-3">
+                                <label class="mb-0">Phone Number</label>
+                                <input type="text" class="form-control" value=(425)598-6365 readonly>
+                            </div>
+                            <div class="mb-3">
+                                <a href="https://github.com/metacmm" class="card-link">GitHub</a>
+                                <a href="https://www.linkedin.com/in/xiaojieliu/" class="card-link">LinkedIn</a>
+                                <a href="https://drive.google.com/file/d/1N3bSunaqtu-WJvi9cWh-mJnvSWnC8ib-/view?usp=sharing" class="card-link">Resume</a>
+                            </div>
+                            <!--div class="mb-3">
                                 <label class="mb-0">Message</label>
                                 <textarea class="form-control"></textarea>
-                            </div>
-                            <button class="btn btn-primary border-0 h-100" type="submit" >Submit</button>
+                            </div-->
+                            <!--button class="btn btn-primary border-0 h-100" type="submit" >Submit</button-->
                         </div>
                     </div>
                 </div>
