--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                         <p class="card-text">
                             <img class="float-left mr-4 img-portrait" src="assets/images/portrait.jpeg" alt="my portrait">
                             Xiaojie Liu loves programming, traveling and writing. she moved to Seattle several years ago,because she wants to get to know more about the world, learning different culture and talking with people from different background. <br>
-                            She works as Software Engineer at Philips Healthcare, developing software for medical device to diagnose the heart disease. Before that, she got her master and bachelor degree in Computer Science.
+                            She works as Software Engineer at Philips Healthcare, developing software for medical device to diagnose the heart disease. Before that, she got her master and bachelor degree in Computer Science. <br>
+                        
                         </p>
                     </div>
                 </div>
