--- a/portfolio.html
+++ b/portfolio.html
@@ -1,71 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-white py-0 border-bottom">
-            <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
-            <div class="navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav ml-auto flex-row justify-content-center">
-                    <li class="nav-item mx-2 m-md-0">
-                        <a class="nav-link" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item mx-2 m-md-0">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item mx-2 m-md-0">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-9">
-                    <div class="card mt-4 mb-4">
-                        <div class="card-body container">
-                            <h5 class="card-title font-weight-bolder">Portfolio</h5>
-                            <hr>
-                            <div class="row">
-                                <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/hangman.jpeg" alt="hangman">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/Hangman/">Hangman</a></figcaption>
-                                </div>
-                                <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/unit4game.jpg" alt="unit-4-game">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/unit-4-game/">unit-4-game</a></figcaption>
-                                </div>
+        <a class="navbar-brand p-3 text-white font-weight-bolder" href="#">Xiaojie Liu</a>
+        <div class="navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav ml-auto flex-row justify-content-center">
+                <li class="nav-item mx-2 m-md-0">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+                <li class="nav-item mx-2 m-md-0">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item mx-2 m-md-0">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-9">
+                <div class="card mt-4 mb-4">
+                    <div class="card-body container">
+                        <h5 class="card-title font-weight-bolder">Portfolio</h5>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/hangman.jpeg" alt="hangman">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://metacmm.github.io/Hangman/">Hangman</a></figcaption>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/trivia.jpg" alt="trivia">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/TriviaGame/">Trivia</a></figcaption>
-                                </div>
-                                <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/giphy.gif" alt="giftastic">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/GifTastic/">GifTastic</a></figcaption>
-                                </div>
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/unit4game.jpg" alt="unit-4-game">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://metacmm.github.io/unit-4-game/">unit-4-game</a></figcaption>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6 p-4">
-                                    <img class="w-100 h-100 float-left" src="assets/images/train.jpg" alt="train schedule">
-                                    <figcaption class="figure-caption text-center w-100 p-2 float-right"><a href="https://metacmm.github.io/TrainSchedule/">Train Schedule</a></figcaption>
-                                </div>
-                                <div class="col-md-6">     
-                                </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/trivia.jpg" alt="trivia">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://metacmm.github.io/TriviaGame/">Trivia</a></figcaption>
+                            </div>
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/giphy.gif" alt="giftastic">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://metacmm.github.io/GifTastic/">GifTastic</a></figcaption>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/train.jpg" alt="train schedule">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://metacmm.github.io/TrainSchedule/">Train Schedule</a></figcaption>
+                            </div>
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/liribot.jpg" alt="liribot">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://github.com/metacmm/liri-node-app">LiriBot</a></figcaption>
                             </div>
                         </div>
                     </div>
                 </div>
-            
             </div>
+
         </div>
-        <footer class="footer p-4 text-center">© Copyright</footer>
+    </div>
+    <footer class="footer p-4 text-center">© Copyright</footer>
 </body>
+
 </html>
