--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
                         <hr> 
                         <p class="card-text">
                             <img class="float-left mr-4 img-portrait" src="assets/images/portrait.jpeg" alt="my portrait">
-                            Xiaojie Liu loves programming, traveling and writing. she moved to Seattle several years ago,because she wants to get to know more about the world, learning different culture and talking with people from different background. <br>
-                            She works as Software Engineer at Philips Healthcare, developing software for medical device to diagnose the heart disease. Before that, she got her master and bachelor degree in Computer Science. <br>
-                        
+                            Xiaojie Liu is a full stack Web and Windows application developer. She has bachelor and Master’s in Computer Science from Tongji University in Shanghai, China, certificate of “Machine Learning” from Stanford University online program, recently studying at the University of Washington Continuing School Bootcamp. Proficient in C#, HTML, Javascript, SQL, Node, .NET Framework programming skills,data structures, algorithms computer science fundamentals, and Agile project management. Experienced in medical device development. My passion for new technology and problem-solving abilities will make me a fast contributor to any engineering team.
+                            <br>    
                         </p>
                     </div>
                 </div>
