--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,18 @@
                         <hr>
                         <div class="row">
                             <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/friendfinder.png" alt="friendfinder">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://heroku-friendfinderapp.herokuapp.com/">Friend Finder</a></figcaption>
+                            </div>
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/burger.png" alt="unit-4-game">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://heroku-eatburgerapp.herokuapp.com/">Eat-da-Burger</a></figcaption>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 p-4">
                                 <img class="w-100 h-100 float-left" src="assets/images/hangman.jpeg" alt="hangman">
                                 <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
                                         href="https://metacmm.github.io/Hangman/">Hangman</a></figcaption>
@@ -70,6 +82,14 @@
                                 <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
                                         href="https://github.com/metacmm/liri-node-app">LiriBot</a></figcaption>
                             </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 p-4">
+                                <img class="w-100 h-100 float-left" src="assets/images/findtutor.png" alt="find tutor">
+                                <figcaption class="figure-caption text-center w-100 p-2 float-right"><a
+                                        href="https://heroku-findtutor.herokuapp.com">Find Tutor</a></figcaption>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
