--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                         <p class="card-text">
                             <img class="float-left mr-4 img-portrait" src="assets/images/portrait.jpeg" alt="my portrait">
                             Xiaojie Liu is a full stack Web and Windows application developer. She has bachelor and Master’s in Computer Science from Tongji University in Shanghai, China, certificate of “Machine Learning” from Stanford University online program, recently studying at the University of Washington Continuing School Bootcamp. 
-                            Proficient in C#, HTML, Javascript, SQL, Node, .NET Framework programming skills,data structures, algorithms computer science fundamentals, and Agile project management. Experienced in medical device development. Her passion for new technology and problem-solving abilities will make her a fast contributor to any engineering team.
+                            <br>
+                            She is proficient in C#, HTML, Javascript, SQL, Node, .NET Framework programming skills,data structures, algorithms computer science fundamentals, and Agile project management. Experienced in medical device development. Her passion for new technology and problem-solving abilities will make her a fast contributor to any engineering team.
                             <br>    
                         </p>
                     </div>
